Remove dependency from global module

--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,15 @@
   "name": "easycounterdown",
   "version": "1.0.3",
   "description": "Easy and pretty countdouwn",
-  "main": "index.js",
   "authors": [
     "IlijaStojkovic <ilijastojkovic@yahoo.com> (http://ezubar.com)"
   ],
   "license": "MIT",
   "keywords": [
     "easy",
-    "countdown"
+    "countdown",
+    "angular",
+    "counter demo"
   ],
   "homepage": "https://github.com/ilijastojkovic/easycountdown",
   "ignore": [
@@ -18,5 +19,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "angular": "~1.4"
+  }
 }
